--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
@@ -220,11 +220,8 @@
                         <t:selectBooleanCheckbox forceId="true" id="chkmanuell4" onclick="chkManuellAutomatischSetzen(this)"
                                                  value="#{ProzessverwaltungForm.task.typeAutomatic}"/>
 
-                        <h:outputLabel for="chkautomatisch" value="#{msgs.ScriptSchritt}"/>
+                        <h:outputLabel for="scripttable" value="#{msgs.ScriptSchritt}"/>
                         <h:panelGroup>
-                            <t:selectBooleanCheckbox style="vertical-align:top" forceId="true" id="chkautomatisch"
-                                                     onclick="txtAutomatischAnzeigen()"
-                                                     value="#{ProzessverwaltungForm.task.typeScriptStep}"/>
                             <t:panelGrid columns="2" forceId="true" id="scripttable">
 
                                 <h:outputText id="scriptname" value="#{msgs.scriptname}"/>
@@ -237,7 +234,6 @@
                                 <t:inputText id="txtautomatisch" forceId="true" style="width: 500px;margin-right:15px"
                                              value="#{ProzessverwaltungForm.task.scriptPath}"/>
                             </t:panelGrid>
-                            <t:message for="chkautomatisch" style="color: red" replaceIdWithLabel="true"/>
                         </h:panelGroup>
 
                         <h:outputLabel for="status" value="#{msgs.status}"/>
